--- a/about/index.html
+++ b/about/index.html
@@ -85,18 +85,17 @@
   </p>
 </header>
 	<div class="article-content">
-        <s style="color: #b2b2b2;font-size: 10px;" >此处并不是赤裸裸的征婚广告</s>
         <ul>
         <li>ID：不林</li>
         <li>年龄：23</li>
         <li>坐标：杭州</li>
         <li>职业：安卓/web前端开发</li>
-        <li>状态：<b>单身贵族</b>，努力成为一个靠谱的<s style="color: transparent">姬佬</s><b>好人</b>( ﾟ∀ﾟ)</li>
-        <li>兴趣：ACG、音乐、美剧，喜欢中性气质的小姐姐，以及所有可爱美好有趣<s style="color: transparent">下流</s>的事儿</li>
-        <li>微博：<a href="http://weibo.com/1759844441" target="_blank" rel="external">轻轻一点，飞速直达</a></li>
-        <li>知乎：<a href="http://www.zhihu.com/people/bu-lin-71" target="_blank" rel="external">轻轻一点，飞速直达</a></li>
-        <li>GitHub：<a href="https://github.com/lightsmeki" target="_blank" rel="external">轻轻一点，飞速直达</a></li>
+        <li>兴趣：ACG、日语、音乐、美剧，喜欢可爱美好有趣<s style="color: transparent">下流</s>的事儿</li>
+        <li>微博：<a href="http://weibo.com/1759844441" target="_blank" rel="external">欢迎( ﾟ∀ﾟ)</a></li>
+        <li>GitHub：<a href="https://github.com/lightsmeki" target="_blank" rel="external">欢迎( ﾟ∀ﾟ)</a></li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
+        <li>motto：做爱做的事，交配交的人( ﾟ∀ﾟ)( ﾟ∀ﾟ)( ﾟ∀ﾟ)</li>
+        <li>详细介绍：<a href="http://zy06812.digitcv.com/">请戳这里( ﾟ∀ﾟ)</a></li></li>
         <!--<li>Email：<a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#x64;&#101;&#x76;&#101;&#108;&#111;&#x70;&#101;&#114;&#x2e;&#x7a;&#104;&#97;&#x69;&#x74;&#x61;&#x6f;&#64;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#x63;&#x6f;&#109;">&#x64;&#101;&#x76;&#101;&#108;&#111;&#x70;&#101;&#114;&#x2e;&#x7a;&#104;&#97;&#x69;&#x74;&#x61;&#x6f;&#64;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#x63;&#x6f;&#109;</a></li>-->
         </ul>
     <!--<embed src="http://www.xiami.com/widget/0_1773340641/singlePlayer.swf" type="application/x-shockwave-flash" width="257" height="33" wmode="transparent">-->
