--- a/about/index.html
+++ b/about/index.html
@@ -89,12 +89,14 @@
         <li>ID：不林</li>
         <li>年龄：23</li>
         <li>坐标：杭州</li>
-        <li>职业：安卓/web前端开发</li>
-        <li>兴趣：ACG、日语、音乐、美剧，喜欢可爱美好有趣<s style="color: transparent">下流</s>的事儿</li>
-        <li>微博：<a href="http://weibo.com/1759844441" target="_blank" rel="external">欢迎( ﾟ∀ﾟ)</a></li>
+        <li>职业：移动开发，目前在学习安卓/web前端</li>
+        <!--<li>兴趣：ACG、日语、音乐、美剧，喜欢可爱美好有趣<s style="color: transparent">下流</s>的事儿</li>-->
+        <li>兴趣：ACG、日语、音乐、美剧</li>
+        <!--<li>微博：<a href="http://weibo.com/1759844441" target="_blank" rel="external">欢迎( ﾟ∀ﾟ)</a></li>-->
         <li>GitHub：<a href="https://github.com/lightsmeki" target="_blank" rel="external">欢迎( ﾟ∀ﾟ)</a></li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
-        <li>motto：做爱做的事，交配交的人( ﾟ∀ﾟ)( ﾟ∀ﾟ)( ﾟ∀ﾟ)</li>
+        <!--<li>motto：做爱做的事，交配交的人( ﾟ∀ﾟ)( ﾟ∀ﾟ)( ﾟ∀ﾟ)</li>-->
+        <li>motto：无限创意，无限潜力( ﾟ∀ﾟ)( ﾟ∀ﾟ)( ﾟ∀ﾟ)</li>
         <li>详细介绍：<a href="http://zy06812.digitcv.com/">请戳这里( ﾟ∀ﾟ)</a></li></li>
         <!--<li>Email：<a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#x64;&#101;&#x76;&#101;&#108;&#111;&#x70;&#101;&#114;&#x2e;&#x7a;&#104;&#97;&#x69;&#x74;&#x61;&#x6f;&#64;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#x63;&#x6f;&#109;">&#x64;&#101;&#x76;&#101;&#108;&#111;&#x70;&#101;&#114;&#x2e;&#x7a;&#104;&#97;&#x69;&#x74;&#x61;&#x6f;&#64;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#x63;&#x6f;&#109;</a></li>-->
         </ul>
