--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,7 @@
         <li>坐标：杭州</li>
         <li>职业：移动开发，目前在学习安卓/web前端以及unity3d</li>
         <!--<li>兴趣：ACG、日语、音乐、美剧，喜欢可爱美好有趣<s style="color: transparent">下流</s>的事儿</li>-->
-        <li>兴趣：ACG、日语、翻唱、美剧</li>
+        <li>兴趣：ACG、日语、翻唱、美剧、户外运动</li>
         <!--<li>微博：<a href="http://weibo.com/1759844441" target="_blank" rel="external">欢迎( ﾟ∀ﾟ)</a></li>-->
         <li>GitHub：<a href="https://github.com/lightsmeki" target="_blank" rel="external">欢迎( ﾟ∀ﾟ)</a></li>
         <li>Email：<a href="mailto:zy06812@foxmail.com">zy06812@foxmail.com</a></li>
