--- a/about/index.html
+++ b/about/index.html
@@ -89,7 +89,7 @@
         <li>ID：不林</li>
         <li>年龄：23</li>
         <li>坐标：杭州</li>
-        <li>职业：移动开发，目前在学习安卓/web前端以及unity3d</li>
+        <li>职业：前端、unity3d、动效学习中</li>
         <!--<li>兴趣：ACG、日语、音乐、美剧，喜欢可爱美好有趣<s style="color: transparent">下流</s>的事儿</li>-->
         <li>兴趣：ACG、日语、翻唱、美剧、户外运动</li>
         <!--<li>微博：<a href="http://weibo.com/1759844441" target="_blank" rel="external">欢迎( ﾟ∀ﾟ)</a></li>-->
