--- a/test/ball_pool.html
+++ b/test/ball_pool.html
@@ -9,7 +9,7 @@
         body {
             overflow: hidden;
             background-color: #ff8fba;
-            background-image: url("../src/bg_img_w400h400.png");
+            background-image: url("./img/bg_img_w400h400.png");
             margin: 0;
             padding: 0;
             user-select: none;
