--- a/test/ball_pool.html
+++ b/test/ball_pool.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="http://dreamsky.github.io/main/blog/common/init.css">
 </head>
 <body>
-<div id="canvas"></div>
+<div id="canvas"></div>r
 <!-- <div class="footer-banner" style="position:absolute;bottom:-300px;left:-200px;width:728px; margin:30px auto"></div> -->
 <script src="assets/protoclass.js"></script>
 <script src='assets/box2d.js'></script>
