--- a/test/ball_pool.html
+++ b/test/ball_pool.html
@@ -22,7 +22,10 @@
     <link rel="stylesheet" href="http://dreamsky.github.io/main/blog/common/init.css">
 </head>
 <body>
-<div id="canvas"></div>r
+
+<br/><br/><div style="color:#E3588F;text-align: center;font-family: 微软雅黑;font-size:100px;" >按鼠标左右键~</div>
+<div id="canvas"></div>
+
 <!-- <div class="footer-banner" style="position:absolute;bottom:-300px;left:-200px;width:728px; margin:30px auto"></div> -->
 <script src="assets/protoclass.js"></script>
 <script src='assets/box2d.js'></script>
