--- a/test/ball_pool.html
+++ b/test/ball_pool.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<br/><br/><div style="color:#E3588F;text-align: center;font-family: 微软雅黑;font-size:100px;" >按鼠标左右键~</div>
+<br/><br/><div style="color:#E3588F;text-align: center;font-family: 微软雅黑;font-size:80px;" >长按左键or右键即可~</div>
 <div id="canvas"></div>
 
 <!-- <div class="footer-banner" style="position:absolute;bottom:-300px;left:-200px;width:728px; margin:30px auto"></div> -->
