--- a/test/ball_pool/ball_pool_mobile.html
+++ b/test/ball_pool/ball_pool_mobile.html
@@ -23,13 +23,13 @@
 </head>
 <body>
 
-<br/><br/><div style="color:#E3588F;text-align: center;font-family: 微软雅黑;font-size:80px;" >长按get惊喜(・∀・)</div>
+<br/><br/><div style="color:#E3588F;text-align: center;font-family: 微软雅黑;font-size:30px;" >长按get惊喜(・∀・)</div>
 <div id="canvas"></div>
 
 <!-- <div class="footer-banner" style="position:absolute;bottom:-300px;left:-200px;width:728px; margin:30px auto"></div> -->
 <script src="assets/protoclass.js"></script>
 <script src='assets/box2d.js'></script>
-<script src='assets/Main.js'></script>
+<script src='assets/Main_mobile.js'></script>
 <script src="http://dreamsky.github.io/main/blog/common/jquery.min.js"></script>
 <script >
 
