--- a/test/geography/geo.html
+++ b/test/geography/geo.html
@@ -29,7 +29,15 @@
             map.addControl(new BMap.ScaleControl());
             map.addControl(new BMap.OverviewMapControl());
             map.centerAndZoom(point, 15);
-            map.addOverlay(new BMap.Marker(point))
+            map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
+//            map.addOverlay(new BMap.Marker(point))
+
+
+//            var map = new BMap.Map("allmap");    // 创建Map实例
+//            map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);  // 初始化地图,设置中心点坐标和地图级别
+//            map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
+//            map.setCurrentCity("北京");          // 设置地图显示的城市 此项是必须设置的
+            map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
         }
     </script>
 </head>
