--- a/test/geography/geo.html
+++ b/test/geography/geo.html
@@ -29,7 +29,7 @@
             map.addControl(new BMap.ScaleControl());
             map.addControl(new BMap.OverviewMapControl());
             map.centerAndZoom(point, 15);
-            map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
+//            map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
 //            map.addOverlay(new BMap.Marker(point))
 
 
