--- a/test/geography/geo.html
+++ b/test/geography/geo.html
@@ -45,8 +45,8 @@
 </head>
 <body>
 <div id="map">
-    <lbs-map width="100px" style="height:100%" >
-        <lbs-poi name="百度大厦" location="116.307852,40.057031" addr="北京市海淀区上地十街10号" ></lbs-poi>
+    <lbs-map width="100px" style="height:100%" center="116.307852,90">
+        <lbs-poi name="你在这儿" location="116.307852,12" ></lbs-poi>
     </lbs-map>
 </div>
 </body>
