--- a/resume/index.html
+++ b/resume/index.html
@@ -142,7 +142,7 @@
                 <div class="fp-tableCell" style="height:775px;">
                     <h1 class="head">感谢您的阅读</h1>
                 <h3>期待有机会能与您共事<span class="mobile-br"><br></span></h3>
-                <h1><a href="javascript:" id="contactMe"> Contact me！</a></h1>
+                <h1><a href="javascript:" id="contactMe">Contact me!</a></h1>
                 </div>
             </div>
             <div class="slide fp-slide fp-table"id="section5" style="width: 50%;">
@@ -183,8 +183,8 @@
             //对移动设备隐藏操作提示
             msg.hide();
         }else{
-            msg.delay(2000).
-                    animate({bottom: -3+'em'}, 500, function () {
+            msg.delay(500).
+                    animate({bottom: -3+'em'}, 100, function () {
                         action = 1;
                     });
         }
