--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Burin's Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Resume_files/style.css?ver1010">
+    <link rel="stylesheet" href="./Resume_files/style.css?ver10102">
     <link rel="shortcut icon" href="./Resume_files/icon.png">
     <!--<script src="./Resume_files/hm.js"></script>-->
     <!-- Baidu Analytics -->
@@ -25,38 +25,61 @@
 
 <body style="overflow: hidden; height: 100%;">
 <div id="resume" class="fullpage-wrapper" style="height: 100%; position: relative; top: 0px;">
+
+
+
     <section id="block-nav">
         <header class="headcontainer">
-            <a class="fl" href="#section1" id="logo" hideFocus="true">简历</a>
+            <a class="fl" href="#section0" id="logo" hideFocus="true">简历</a>
             <nav class="fr">
                 <ul>
-                    <li>
-                        <a href="#section1" id="nav-intro" hideFocus="true">个人简介</a>
-                    </li>
-                    <li>
-                        <a href="#section2" id="nav-skill" hideFocus="true">专业技能</a>
-                    </li>
-
-                    <li><a href="#section3" id="nav-workEXP" hideFocus="true">工作经历</a></li>
-                    <li><a href="#section4" id="nav-prjEXP" hideFocus="true">项目经验</a></li>
+                    <li><a href="#section1" id="nav-intro" hideFocus="true">个人简介</a></li>
+                    <li><a href="#section2" id="nav-workEXP" hideFocus="true">工作经历</a></li>
+                    <li><a href="#section3" id="nav-prjEXP" hideFocus="true">项目经验</a></li>
+                    <li><a href="#section4" id="nav-skill" hideFocus="true">专业技能</a></li>
                     <li><a href="#section5" id="nav-wantMore" hideFocus="true">联系方式</a></li>
                 </ul>
             </nav>
         </header>
     </section>
 
+    <!--封面-->
+    <div id="section section0 fp-section fp-table "id="section0" style="height: 775px; background-color: #901347;">
+        <div class="fp-tableCell" style="height:775px;">
+            <div class="info">
+                <div class="img">
+                    <!--<img class="hd-img" src="./Resume_files/head.jpg" alt="My cartoon image">-->
+                    <div class="hd-img"></div>
+                </div>
+                <div class="txt">
+                    <h1>1年Web前端求捉走</h1>
+                    <hr>
+                </div>
+                <!--<hr>-->
+                <div class="row">
+                    <!--<span class="tag diploma">英语六级</span><span class="tag diploma">计算机二级</span>-->
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <!--个人简介-->
     <div class="section section1 fp-section fp-table active" id="section1" style="height: 775px; background-color: #901347;">
         <div class="fp-tableCell" style="height:775px;">
         <div class="info">
             <div class="img">
-                <!--<img class="hd-img" src="./Resume_files/head.jpg" alt="My cartoon image">-->
                 <div class="hd-img"></div>
             </div>
             <div class="txt">
-                <h1>Burin</h1>
-                <p>Web前端</p>
-                <p>1年</p>
+                <h1>个人简介</h1>
+                <p>周烨</p>
+                <p>23岁 杭州人</p>
+                <p>2010年本科毕业于宁波诺丁汉大学,电气工程自动化专业</p>
+                <p>目前从事Web前端开发</p>
+                <!--<div style="border-top:#ccc double 6px;position:relative;z-index:9;margin-top:10px;">-->
+                    <!--<span style="position:relative;bottom:15px;">兴趣是acg音乐&prpr大姐姐（污</span>-->
+                <!--</div>-->
+                <p><s>兴趣是acg音乐&prpr大姐姐(污</s></p>
                 <hr>
             </div>
             <!--<hr>-->
@@ -67,7 +90,59 @@
     </div>
     </div>
 
-    <div class="section section2 fp-section fp-table" id="section2" style="height: 775px; background-color: #3E0935;">
+    <!--工作经历-->
+    <div class="section section2 fp-section fp-table" id="section2" style="height: 775px; background-color: rgba(244, 201, 215, 0.64);">
+        <div class="fp-tableCell" style="height:775px;">
+            <h1 class="head">工作经历</h1>
+            <div class="info">
+                <h2>校园综合问答社区</h2>
+                <h3>项目简介</h3>
+                <div class="intro clearfix">
+                    <div class="cell"><a href="http://luoway.space/resume/image/yihu-shortcut.png"><img class="shortcut-img" src="./Resume_files/006euLnxjw1ewku3vsk38j30pz0h7q5z.jpg" alt="项目简图" width="100" height="100"></a></div>
+                    <div class="cell"><p>初创互联网公司产品网站，构建大学生专属的综合型问答社区。</p></div>
+                </div>
+                <h3>工作内容</h3>
+                <p>负责网站的前端开发和设计实现。<span class="mobile-br"><br></span>与负责产品、设计的同事密切沟通合作。</p>
+                <h3>运用技术</h3>
+                <p>CSS、foundation框架、HTML、jQuery等</p>
+            </div>
+            <div class="row">
+                <b><a href="https://github.com/luoway" target="_blank">查看更多»</a></b>
+            </div>
+        </div></div>
+
+    <!--项目经历-->
+    <div class="section section3 fp-section"id="section3" style="height: 775px; background-color: #726f80;">
+        <div class="fp-slides"><div class="fp-slidesContainer" style="width: 300%;">
+            <div class="slide fp-slide fp-table active" style="width: 33.3333%;">
+                <div class="fp-tableCell" style="height:775px;">
+                    <h1 class="head">项目经历</h1>
+                    <h1 class="head">挑剔、完美主义</h1>
+                    <p>在前端领域，我的完美主义表现在：</p>
+                    <p>对 <strong>用户体验</strong> 的斟酌</p>
+                    <p>对 <strong>前端性能</strong> 的关注</p>
+                    <p>对 <strong>代码规范</strong> 的实践</p>
+                    <p>对页面重构的 <strong>1px</strong> 调整</p>
+                    <p>……</p>
+                    <p>尽我所能，力臻完美</p>
+                </div></div><div class="slide fp-slide fp-table" style="width: 33.3333%;"><div class="fp-tableCell" style="height:775px;">
+            <h1 class="head">细心、细致、充满逻辑</h1>
+            <p>我确定画风不同的区域，<span class="mobile-br"><br></span>切换就要干净利落才符合逻辑</p>
+            <p>我确定穿浅色裤子，<span class="mobile-br"><br></span>必须配浅色上衣才符合逻辑、看着顺眼</p>
+            <p>我确定智能机正面是黑色的，<span class="mobile-br"><br></span>才不会因为屏幕“黑边”丑得感人</p>
+            <p>……</p>
+            <p>每个人都有自己的逻辑，但是，<span class="mobile-br"><br></span>因为细心，我往往能有更细致的思考</p>
+        </div></div><div class="slide fp-slide fp-table" style="width: 33.3333%;"><div class="fp-tableCell" style="height:775px;">
+            <h1 class="head">坚持、专注、敬业</h1>
+            <p>又到饭点了，码出这段代码再去觅食。</p>
+            <p>IDE 一开一闭，一天就过去了……</p>
+            <p>既然开始做，那就要尽力做好！</p>
+        </div></div></div></div><div class="fp-controlArrow fp-prev"></div><div class="fp-controlArrow fp-next"></div>
+
+    </div>
+
+    <!--专业技能-->
+    <div class="section section4 fp-section fp-table" id="section4" style="height: 775px; background-color: #3E0935;">
         <div class="fp-tableCell" style="height:775px;">
 
         <h1 class="head">技能清单</h1>
@@ -85,56 +160,7 @@
         </div>
     </div></div>
 
-    <div class="section section3 fp-section fp-table" id="section3" style="height: 775px; background-color: rgba(244, 201, 215, 0.64);">
-        <div class="fp-tableCell" style="height:775px;">
-        <h1 class="head">项目经历</h1>
-        <div class="info">
-            <h2>校园综合问答社区</h2>
-            <h3>项目简介</h3>
-            <div class="intro clearfix">
-                <div class="cell"><a href="http://luoway.space/resume/image/yihu-shortcut.png"><img class="shortcut-img" src="./Resume_files/006euLnxjw1ewku3vsk38j30pz0h7q5z.jpg" alt="项目简图" width="100" height="100"></a></div>
-                <div class="cell"><p>初创互联网公司产品网站，构建大学生专属的综合型问答社区。</p></div>
-            </div>
-            <h3>工作内容</h3>
-            <p>负责网站的前端开发和设计实现。<span class="mobile-br"><br></span>与负责产品、设计的同事密切沟通合作。</p>
-            <h3>运用技术</h3>
-            <p>CSS、foundation框架、HTML、jQuery等</p>
-        </div>
-        <div class="row">
-            <b><a href="https://github.com/luoway" target="_blank">查看更多»</a></b>
-        </div>
-    </div></div>
-
-    <div class="section section4 fp-section"id="section4" style="height: 775px; background-color: #726f80;">
-        <div class="fp-slides"><div class="fp-slidesContainer" style="width: 300%;">
-            <div class="slide fp-slide fp-table active" style="width: 33.3333%;">
-                <div class="fp-tableCell" style="height:775px;">
-
-            <h1 class="head">挑剔、完美主义</h1>
-            <p>在前端领域，我的完美主义表现在：</p>
-            <p>对 <strong>用户体验</strong> 的斟酌</p>
-            <p>对 <strong>前端性能</strong> 的关注</p>
-            <p>对 <strong>代码规范</strong> 的实践</p>
-            <p>对页面重构的 <strong>1px</strong> 调整</p>
-            <p>……</p>
-            <p>尽我所能，力臻完美</p>
-        </div></div><div class="slide fp-slide fp-table" style="width: 33.3333%;"><div class="fp-tableCell" style="height:775px;">
-            <h1 class="head">细心、细致、充满逻辑</h1>
-            <p>我确定画风不同的区域，<span class="mobile-br"><br></span>切换就要干净利落才符合逻辑</p>
-            <p>我确定穿浅色裤子，<span class="mobile-br"><br></span>必须配浅色上衣才符合逻辑、看着顺眼</p>
-            <p>我确定智能机正面是黑色的，<span class="mobile-br"><br></span>才不会因为屏幕“黑边”丑得感人</p>
-            <p>……</p>
-            <p>每个人都有自己的逻辑，但是，<span class="mobile-br"><br></span>因为细心，我往往能有更细致的思考</p>
-        </div></div><div class="slide fp-slide fp-table" style="width: 33.3333%;"><div class="fp-tableCell" style="height:775px;">
-            <h1 class="head">坚持、专注、敬业</h1>
-            <p>又到饭点了，码出这段代码再去觅食。</p>
-            <p>IDE 一开一闭，一天就过去了……</p>
-            <p>既然开始做，那就要尽力做好！</p>
-        </div></div></div></div><div class="fp-controlArrow fp-prev"></div><div class="fp-controlArrow fp-next"></div>
-        
-        
-    </div>
-
+<!--联系方式-->
     <div class="section section5 fp-section"  style="height: 775px; background-color: rgb(169, 190, 68);">
         <div class="fp-slides">
             <!--<div class="fp-slidesContainer" style="width: 200%;">-->
@@ -192,12 +218,12 @@
         $.extend($.easing,{ easeInQuart: function (x, t, b, c, d) { return c*(t/=d)*t*t*t + b; }});
 
         $('#resume').fullpage({
-            sectionsColor : ['#901347', '#3E0935', 'rgba(244, 201, 215, 0.64)', '#726f80','#a9be44'],
+            sectionsColor : ['#901347', '#3E0935', '#ECAD17', '#726f80','#a9be44'],
             loopTop:true,
             loopBottom:true,
             afterLoad: function(anchorLink, index){
                 if(index == 4){
-                    setTimeout($.fn.fullpage.moveSlideRight(), 1000);
+                    setTimeout($.fn.fullpage.moveSlideLeft(), 1000);
                 }
             }
         });
@@ -212,7 +238,7 @@
 
         //获取联系方式
         $("#contactMe").on('click', function () {
-            $.fn.fullpage.moveSlideRight();
+            $.fn.fullpage.moveSlideLeft();
         });
 
         //禁用Tab键，IE兼容
