--- a/resume/index.html
+++ b/resume/index.html
@@ -8,18 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Resume_files/style.css?ver10102">
     <link rel="shortcut icon" href="./Resume_files/icon.png">
-    <!--<script src="./Resume_files/hm.js"></script>-->
-    <!-- Baidu Analytics -->
-    <script>
-        var _hmt = _hmt || [];
-        (function() {
-            var hm = document.createElement("script");
-            hm.src = "//hm.baidu.com/hm.js?1621a3c2e0b724f62c4e07cc31c31e83";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
 
+    <link rel="stylesheet" href="./Resume_files/sss.min.css?ver10105">
 </head>
 
 
@@ -30,7 +20,7 @@
 
     <section id="block-nav">
         <header class="headcontainer">
-            <a class="fl" href="#section0" id="logo" hideFocus="true">简历</a>
+            <a class="fl" href="http://www.godiscoding.com/resume/" id="logo" hideFocus="true">简历</a>
             <nav class="fr">
                 <ul>
                     <li><a href="#section1" id="nav-intro" hideFocus="true">个人简介</a></li>
@@ -76,10 +66,11 @@
                 <p>23岁 杭州人</p>
                 <p>2010年本科毕业于宁波诺丁汉大学,电气工程自动化专业</p>
                 <p>目前从事Web前端开发</p>
+                <p>状态：在职 期待好的合作机会</p>
                 <!--<div style="border-top:#ccc double 6px;position:relative;z-index:9;margin-top:10px;">-->
                     <!--<span style="position:relative;bottom:15px;">兴趣是acg音乐&prpr大姐姐（污</span>-->
                 <!--</div>-->
-                <p><s>兴趣是acg音乐&prpr大姐姐(污</s></p>
+                <!--<p><s>兴趣是acg音乐&prpr大姐姐(污</s></p>-->
                 <hr>
             </div>
             <!--<hr>-->
@@ -93,51 +84,234 @@
     <!--工作经历-->
     <div class="section section2 fp-section fp-table" id="section2" style="height: 775px; background-color: rgba(244, 201, 215, 0.64);">
         <div class="fp-tableCell" style="height:775px;">
+
+
             <h1 class="head">工作经历</h1>
-            <div class="info">
-                <h2>校园综合问答社区</h2>
-                <h3>项目简介</h3>
-                <div class="intro clearfix">
-                    <div class="cell"><a href="http://luoway.space/resume/image/yihu-shortcut.png"><img class="shortcut-img" src="./Resume_files/006euLnxjw1ewku3vsk38j30pz0h7q5z.jpg" alt="项目简图" width="100" height="100"></a></div>
-                    <div class="cell"><p>初创互联网公司产品网站，构建大学生专属的综合型问答社区。</p></div>
-                </div>
-                <h3>工作内容</h3>
-                <p>负责网站的前端开发和设计实现。<span class="mobile-br"><br></span>与负责产品、设计的同事密切沟通合作。</p>
-                <h3>运用技术</h3>
-                <p>CSS、foundation框架、HTML、jQuery等</p>
+            <!--<div class="info">-->
+                <!--<h2>校园综合问答社区</h2>-->
+                <!--<h3>项目简介</h3>-->
+                <!--<div class="intro clearfix">-->
+                    <!--<div class="cell"><a href="http://luoway.space/resume/image/yihu-shortcut.png"><img class="shortcut-img" src="./Resume_files/006euLnxjw1ewku3vsk38j30pz0h7q5z.jpg" alt="项目简图" width="100" height="100"></a></div>-->
+                    <!--<div class="cell"><p>初创互联网公司产品网站，构建大学生专属的综合型问答社区。</p></div>-->
+                <!--</div>-->
+                <!--<h3>工作内容</h3>-->
+                <!--<p>负责网站的前端开发和设计实现。<span class="mobile-br"><br></span>与负责产品、设计的同事密切沟通合作。</p>-->
+                <!--<h3>运用技术</h3>-->
+                <!--<p>CSS、foundation框架、HTML、jQuery等</p>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<b><a href="https://github.com/luoway" target="_blank">查看更多»</a></b>-->
+            <!--</div>-->
+
+            <div id="timeline">
+                <ul id="issues">
+                    <li id="2014">
+                        <div class="inner">
+                            <p>2014/07 ~ 2015/03</p>
+                            <p>就职于杭州朗群智能科技有限公司</p>
+                            <p>产品部</p>
+                            <p>- 负责机械臂控制相关的客户端android版本开发</p>
+                            <p>- 参与客户端qt版本开发</p>
+                        </div>
+
+                        <!--<img src="images/img4.jpg" width="436" height="300" />-->
+                    </li>
+                    <li id="2015">
+                        <div class="inner">
+                        <p>2015/04 ~ 2015/10</p>
+                        <p>就职于浙江博采传媒</p>
+                        <p>移动互联部</p>
+                        <p>- 负责部门的html5应用开发</p>
+                        <p>- 负责呼呼收音机android TV版维护</p>
+                        </div>
+                        <!--<img src="images/img4.jpg" width="436" height="300" />-->
+                    </li>
+                </ul>
+                <ul id="dates">
+                    <li><a href="#2014">2014</a></li>
+                    <li><a href="#2015">2015</a></li>
+                </ul>
             </div>
-            <div class="row">
-                <b><a href="https://github.com/luoway" target="_blank">查看更多»</a></b>
-            </div>
+
+
         </div></div>
 
     <!--项目经历-->
     <div class="section section3 fp-section"id="section3" style="height: 775px; background-color: #726f80;">
-        <div class="fp-slides"><div class="fp-slidesContainer" style="width: 300%;">
-            <div class="slide fp-slide fp-table active" style="width: 33.3333%;">
-                <div class="fp-tableCell" style="height:775px;">
-                    <h1 class="head">项目经历</h1>
-                    <h1 class="head">挑剔、完美主义</h1>
-                    <p>在前端领域，我的完美主义表现在：</p>
-                    <p>对 <strong>用户体验</strong> 的斟酌</p>
-                    <p>对 <strong>前端性能</strong> 的关注</p>
-                    <p>对 <strong>代码规范</strong> 的实践</p>
-                    <p>对页面重构的 <strong>1px</strong> 调整</p>
-                    <p>……</p>
-                    <p>尽我所能，力臻完美</p>
-                </div></div><div class="slide fp-slide fp-table" style="width: 33.3333%;"><div class="fp-tableCell" style="height:775px;">
-            <h1 class="head">细心、细致、充满逻辑</h1>
-            <p>我确定画风不同的区域，<span class="mobile-br"><br></span>切换就要干净利落才符合逻辑</p>
-            <p>我确定穿浅色裤子，<span class="mobile-br"><br></span>必须配浅色上衣才符合逻辑、看着顺眼</p>
-            <p>我确定智能机正面是黑色的，<span class="mobile-br"><br></span>才不会因为屏幕“黑边”丑得感人</p>
-            <p>……</p>
-            <p>每个人都有自己的逻辑，但是，<span class="mobile-br"><br></span>因为细心，我往往能有更细致的思考</p>
-        </div></div><div class="slide fp-slide fp-table" style="width: 33.3333%;"><div class="fp-tableCell" style="height:775px;">
-            <h1 class="head">坚持、专注、敬业</h1>
-            <p>又到饭点了，码出这段代码再去觅食。</p>
-            <p>IDE 一开一闭，一天就过去了……</p>
-            <p>既然开始做，那就要尽力做好！</p>
-        </div></div></div></div><div class="fp-controlArrow fp-prev"></div><div class="fp-controlArrow fp-next"></div>
+        <!--<div class="fp-slides"><div class="fp-slidesContainer" style="width: 300%;">-->
+            <!--<div class="slide fp-slide fp-table active" style="width: 33.3333%;">-->
+                <!--<div class="fp-tableCell" style="height:100px;">-->
+                    <h1 class="head" style="margin-top:50px;">项目经历</h1>
+                    <!--<h1 class="head">挑剔、完美主义</h1>-->
+                    <!--<p>在前端领域，我的完美主义表现在：</p>-->
+                    <!--<p>对 <strong>用户体验</strong> 的斟酌</p>-->
+                    <!--<p>对 <strong>前端性能</strong> 的关注</p>-->
+                    <!--<p>对 <strong>代码规范</strong> 的实践</p>-->
+                    <!--<p>对页面重构的 <strong>1px</strong> 调整</p>-->
+                    <!--<p>……</p>-->
+                    <!--<p>尽我所能，力臻完美</p>-->
+                <!--</div>-->
+                <!--</div><div class="slide fp-slide fp-table" style="width: 33.3333%;"><div class="fp-tableCell" style="height:775px;">&ndash;&gt;-->
+            <!--<h1 class="head">细心、细致、充满逻辑</h1>-->
+            <!--<p>我确定画风不同的区域，<span class="mobile-br"><br></span>切换就要干净利落才符合逻辑</p>-->
+            <!--<p>我确定穿浅色裤子，<span class="mobile-br"><br></span>必须配浅色上衣才符合逻辑、看着顺眼</p>-->
+            <!--<p>我确定智能机正面是黑色的，<span class="mobile-br"><br></span>才不会因为屏幕“黑边”丑得感人</p>-->
+            <!--<p>……</p>-->
+            <!--<p>每个人都有自己的逻辑，但是，<span class="mobile-br"><br></span>因为细心，我往往能有更细致的思考</p>-->
+        <!--</div></div><div class="slide fp-slide fp-table" style="width: 33.3333%;"><div class="fp-tableCell" style="height:775px;">-->
+            <!--<h1 class="head">坚持、专注、敬业</h1>-->
+            <!--<p>又到饭点了，码出这段代码再去觅食。</p>-->
+            <!--<p>IDE 一开一闭，一天就过去了……</p>-->
+            <!--<p>既然开始做，那就要尽力做好！</p>-->
+        <!--</div></div></div></div>-->
+        <!--<div class="fp-controlArrow fp-prev"></div><div class="fp-controlArrow fp-next"></div>-->
+
+        <div class="projects">
+
+            <div class="project show ani0">
+                <div class="mask">
+                    <div class="back">
+                        <h2>博采传媒电影官网</h2>
+                        <p>内容包括浙江博采传媒公司的原创动画、影视作品、节目花絮、人才招聘等等。</p>
+                        <a class="link" href="http://www.hezifilm.com/" target="_blank" rel="external">查看作品</a>
+                        <nav class="tags">
+                            <a href="#!/projects/development"></a>
+                            <a href="#!/projects/microsite"></a>
+                            <a class="tri_pro" href="#!/projects/jquery">jQuery,</a>
+                            <a class="tri_pro" href="#!/projects/css3">css3,</a>
+                            <a class="tri_pro" href="#!/projects/html5">html5,</a>
+                            <a class="tri_pro" href="#!/projects/php">php(front-end),</a>
+                            <a class="tri_pro" href="#!/projects/2015">2015</a>
+                        </nav>
+                        <a class="view popup_iframe cboxElement" href="http://www.hezifilm.com/">VIEW PROJECT</a>
+                    </div>
+                    <div class="front">
+                        <h2>博采传媒<br>电影官网</h2>
+                        <span class="tooltip heart"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project show ani1">
+                <div class="mask">
+                    <div class="back">
+                        <h2>呼呼收音机产品官网</h2>
+                        <p>
+                            介绍呼呼收音机的产品，包括原创儿童故事，原创儿童动画，古诗、绘本，亲子类原创文章，目前更新中。
+                        </p>
+                        <a class="link" href="http://newhuhu.vsaker.com/" target="_blank" rel="external">查看作品</a>
+                        <nav class="tags">
+                            <a href="#!/projects/development"></a>
+                            <a href="#!/projects/website"></a>
+                            <a class="tri_pro" href="#!/projects/jquery">jQuery,</a>
+                            <a class="tri_pro" href="#!/projects/css3">css3,</a>
+                            <a class="tri_pro" href="#!/projects/html5">html5,</a>
+                            <a class="tri_pro" href="#!/projects/php">php(front-end),</a>
+                            <a class="tri_pro" href="#!/projects/2015">2015</a>
+                        </nav>
+                        <a class="view popup_iframe cboxElement" href="http://newhuhu.vsaker.com/">VIEW PROJECT</a>
+                    </div>
+                    <div class="front">
+                        <h2>呼呼收音机<br>产品官网</h2>
+                        <span class="tooltip heart"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project show ani2">
+                <div class="mask">
+                    <div class="back">
+                        <h2>js小游戏-呼呼球池</h2>
+                        <p>点击左右键可以生成一堆玩偶，角色出自浙江博采传媒《昆塔动画》系列作品。</p>
+                        <a class="link" href="http://www.godiscoding.com/test/ball_pool/" target="_blank" rel="external">查看作品</a>
+                        <nav class="tags">
+                            <a href="#!/projects/development"></a>
+                            <a href="#!/projects/website"></a>
+                            <a class="tri_pro" href="#!/projects/jquery">jQuery,</a>
+                            <a class="tri_pro" href="#!/projects/css3">css3,</a>
+                            <a class="tri_pro" href="#!/projects/html5">html5,</a>
+                            <a class="tri_pro" href="#!/projects/2015">2015</a>
+                        </nav>
+                        <a class="view popup_iframe cboxElement" href="http://www.godiscoding.com/test/ball_pool/">VIEW PROJECT</a>
+                    </div>
+                    <div class="front">
+                        <h2>js小游戏<br>呼呼球池</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project show ani3">
+                <div class="mask">
+                    <div class="back">
+                        <h2>微信故事大礼包</h2>
+                        <p>
+                            移动端的活动页面，包括整理的一些原创儿童故事节目。
+                        </p>
+                        <a class="link" href="http://weixin.vsaker.com/Activity/gushidalibao" target="_blank" rel="external">查看作品</a>
+                        <nav class="tags">
+                            <a href="#!/projects/development"></a>
+                            <a href="#!/projects/website"></a>
+                            <a class="tri_pro" href="#!/projects/jquery">jQuery,</a>
+                            <a class="tri_pro" href="#!/projects/css3">css3,</a>
+                            <a class="tri_pro" href="#!/projects/html5">html5,</a>
+                            <a class="tri_pro" href="#!/projects/2015">2015</a>
+                        </nav>
+                        <a class="view popup_iframe cboxElement" href="http://weixin.vsaker.com/Activity/gushidalibao">VIEW PROJECT</a>
+                    </div>
+                    <div class="front">
+                        <h2>微信故事大礼包<br>(移动端)</h2>
+                        <span class="tooltip award"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project show ani4">
+                <div class="mask">
+                    <div class="back">
+                        <h2>民谣大家唱活动</h2>
+                        <p>移动端的民谣比赛活动页面，包括上传民谣，用户投票和用户分享。</p>
+                        <a class="link" href="http://weixin.vsaker.com/Minyao/index" target="_blank" rel="external">查看作品</a>
+                        <nav class="tags">
+                            <a href="#!/projects/development"></a>
+                            <a href="#!/projects/website"></a>
+                            <a class="tri_pro" href="#!/projects/jquery">jQuery,</a>
+                            <a class="tri_pro" href="#!/projects/css3">css3,</a>
+                            <a class="tri_pro" href="#!/projects/html5">html5,</a>
+                            <a class="tri_pro" href="#!/projects/2015">2015</a>
+                        </nav>
+                        <a class="view popup_iframe cboxElement" href="http://weixin.vsaker.com/Minyao/index">VIEW PROJECT</a>
+                    </div>
+                    <div class="front">
+                        <h2>民谣大家唱活动<br>(移动端)</h2>
+                        <span class="tooltip heart"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project show ani5">
+                <div class="mask">
+                    <div class="back">
+                        <h2>小艺术家免费抢票</h2>
+                        <p>
+                            移动端的抢票活动页面，支持限时抢票。
+                        </p>
+                        <a class="link" href="http://weixin.vsaker.com/Activity/art_part" target="_blank" rel="external">查看作品</a>
+                        <nav class="tags">
+                            <a href="#!/projects/development"></a>
+                            <a href="#!/projects/website"></a>
+                            <a class="tri_pro" href="#!/projects/jquery">jQuery,</a>
+                            <a class="tri_pro" href="#!/projects/css3">css3,</a>
+                            <a class="tri_pro" href="#!/projects/html5">html5,</a>
+                            <a class="tri_pro" href="#!/projects/2015">2015</a>
+                        </nav>
+                        <a class="view popup_iframe" href="http://weixin.vsaker.com/Activity/art_part">VIEW PROJECT</a>
+                    </div>
+                    <div class="front">
+                        <h2>小艺术家免费抢票<br>(移动端)</h2>
+                    </div>
+                </div>
+            </div>
+            </div>
 
     </div>
 
@@ -147,13 +321,23 @@
 
         <h1 class="head">技能清单</h1>
         <div class="row">
-            <span class="tag lev3">HTML</span><span class="tag lev3">CSS</span><span class="tag lev2">LESS</span>
+            <span class="tag lev3">HTML</span>
+            <span class="tag lev3">CSS</span>
+            <span class="tag lev3">JavaScript</span>
+            <!--<span class="tag lev1">LESS</span>-->
         </div>
         <div class="row">
-            <span class="tag lev3">JavaScript</span><span class="tag lev3">jQuery</span><span class="tag lev2">Git</span><span class="tag lev2">Photoshop</span>
+
+            <span class="tag lev3">jQuery</span>
+            <span class="tag lev3">Git</span>
+            <span class="tag lev3">SVN</span>
+            <span class="tag lev3">Photoshop</span>
         </div>
         <div class="row">
-            <span class="tag">Ajax</span><span class="tag">PHP</span><span class="tag">mysql</span>
+            <span class="tag lev2">Android</span>
+            <span class="tag">Ajax</span>
+            <span class="tag">PHP</span>
+            <!--<span class="tag">mysql</span>-->
         </div>
         <div class="row">
             <span class="tag">Gulp</span>
@@ -298,6 +482,25 @@
             }
         });
     });
+</script>
+
+<!--时间轴-->
+<script type="text/javascript" src="./Resume_files/jquery.timelinr-0.9.4.js"></script>
+<script type="text/javascript">
+    $(function(){
+        $("#timeline").timelinr()
+    });
+</script>
+
+<!-- Baidu Analytics -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "//hm.baidu.com/hm.js?1621a3c2e0b724f62c4e07cc31c31e83";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
 </script>
 
 </body></html>
