--- a/resume/index.html
+++ b/resume/index.html
@@ -23,11 +23,11 @@
             <a class="fl" href="http://www.godiscoding.com/resume/" id="logo" hideFocus="true">简历</a>
             <nav class="fr">
                 <ul>
-                    <li><a href="#section1" id="nav-intro" hideFocus="true">个人简介</a></li>
-                    <li><a href="#section2" id="nav-workEXP" hideFocus="true">工作经历</a></li>
-                    <li><a href="#section3" id="nav-prjEXP" hideFocus="true">项目经验</a></li>
-                    <li><a href="#section4" id="nav-skill" hideFocus="true">专业技能</a></li>
-                    <li><a href="#section5" id="nav-wantMore" hideFocus="true">联系方式</a></li>
+                    <li><a href="http://www.godiscoding.com/resume/#section1" id="nav-intro" hideFocus="true">个人简介</a></li>
+                    <li><a href="http://www.godiscoding.com/resume/#section2" id="nav-workEXP" hideFocus="true">工作经历</a></li>
+                    <li><a href="http://www.godiscoding.com/resume/#section3" id="nav-prjEXP" hideFocus="true">项目经验</a></li>
+                    <li><a href="http://www.godiscoding.com/resume/#section4" id="nav-skill" hideFocus="true">专业技能</a></li>
+                    <li><a href="http://www.godiscoding.com/resume/#section5" id="nav-wantMore" hideFocus="true">联系方式</a></li>
                 </ul>
             </nav>
         </header>
