--- a/resume/index.html
+++ b/resume/index.html
@@ -41,10 +41,10 @@
                     <!--<img class="hd-img" src="./Resume_files/head.jpg" alt="My cartoon image">-->
                     <div class="hd-img"></div>
                 </div>
-                <div class="txt">
-                    <h1>1年Web前端求捉走</h1>
-                    <hr>
-                </div>
+                <!--<div class="txt">-->
+                    <!--<h1>1年Web前端求捉走</h1>-->
+                    <!--<hr>-->
+                <!--</div>-->
                 <!--<hr>-->
                 <div class="row">
                     <!--<span class="tag diploma">英语六级</span><span class="tag diploma">计算机二级</span>-->
